@@ -1,3 +1,8 @@
+2008-11-04  Emmanuele Bassi  <ebassi@linux.intel.com>
+
+	* clutter/clutter-script.c: Document the "is-default" member of
+	a ClutterStage definition.
+
 2008-11-04  Neil Roberts  <neil@linux.intel.com>
 
 	* clutter/cogl/gl/cogl.c (cogl_perspective): Use the accurate
